feat: pass page and size to list tasks
