# api/docs/swagger.json
@@ -90,16 +90,16 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "default": 0,
-                        "description": "start",
-                        "name": "start",
+                        "default": 1,
+                        "description": "page",
+                        "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "default": 10,
-                        "description": "end",
-                        "name": "end",
+                        "description": "size",
+                        "name": "size",
                         "in": "query"
                     }
                 ],
@@ -215,7 +215,7 @@
                 "summary": "Get a task by id",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "ID of task",
                         "name": "id",
                         "in": "path",
@@ -275,7 +275,7 @@
                 "summary": "Delete a task by id",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "ID of task",
                         "name": "id",
                         "in": "path",
@@ -337,7 +337,7 @@
                 "summary": "Update task's status by id",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "ID of task",
                         "name": "id",
                         "in": "path",
@@ -400,7 +400,7 @@
                 "summary": "Change task's title by id",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "ID of task",
                         "name": "id",
                         "in": "path",
